# payroll

./: .gitignore  ISO-4217.csv  README.md  pyproject.toml
data/: organisation.yml
data/employees/: alice-doe-001.yml
data/tables/: 2020-income-tax-single.csv  2020-maternity.csv  2020-ssc.csv  2020-statutory-bonus.csv
data/templates/: payslip_email_body.html  payslip_email_subject.html  payslip_template_basic.html
payroll/: __main__.py  calculation.py  custom_base_model.py  date_utils.py  employee.py  final_settlement_forms.py  line_item.py  main.py  organisation.py  payment.py  payroll.py  tax_table.py  tax_table_manager.py  transactions.py  yaml_utils.py
